# lyrics_db

./: .gitignore  CMakeLists.txt  Lyrics_Base_config.h.in  README  README.md  main.cpp
classes/: adadsad.txt  database.cpp  database.h  db_file.cpp  db_file.h
dbManagement/: dbManagement.h
lyrics_db/: tmp.txt
